--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
     <a href="#products">Products</a>
     <a href="#about">About</a>
     <a href="#contact">Contact</a>
+    <a href="tel:9535807317" style="margin-left:auto; background:#25D366; color:white; padding:0.4rem 0.8rem; border-radius:4px; font-weight:bold;">Call Now</a>
   </nav>
 
   <section class="hero" id="home">
