--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       animation: fade 20s infinite;
     }
     .hero .slide:nth-child(1) {
-      background-image: url('https://images.unsplash.com/photo-1600585154340-be6161c2d80e');
+      background-image: url('https://static.vecteezy.com/system/resources/previews/013/472/412/original/brown-cozy-chair-illustration-on-white-background-free-vector.jpg');
       animation-delay: 0s;
     }
     .hero .slide:nth-child(2) {
