--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       animation-delay: 0s;
     }
     .hero .slide:nth-child(2) {
-      background-image: url('https://images.unsplash.com/photo-1598300057921-08f13c0ac3e2');
+      background-image: url('https://img.freepik.com/premium-photo/white-leather-couch-with-white-leather-seat-red-curtain_931576-38846.jpg');
       animation-delay: 5s;
     }
     .hero .slide:nth-child(3) {
