--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       animation: fade 20s infinite;
     }
     .hero .slide:nth-child(1) {
-      background-image: url('https://static.vecteezy.com/system/resources/previews/013/472/412/original/brown-cozy-chair-illustration-on-white-background-free-vector.jpg');
+      background-image: url('https://images.unsplash.com/photo-1600585154340-be6161c2d80e');
       animation-delay: 0s;
     }
     .hero .slide:nth-child(2) {
-      background-image: url('https://img.freepik.com/premium-photo/white-leather-couch-with-white-leather-seat-red-curtain_931576-38846.jpg');
+      background-image: url('https://images.unsplash.com/photo-1598300057921-08f13c0ac3e2');
       animation-delay: 5s;
     }
     .hero .slide:nth-child(3) {
@@ -226,7 +226,7 @@
   <section class="section" id="contact">
     <h2>Contact Us</h2>
     <p>📍 Visit our showroom: Maheshwari Circle, Manchenahalli, Chikkaballapur Road</p>
-    <p>📞 Phone: 95358 07317, 88619 17473</p>
+    <p>📞 Phone: <a href="tel:9535807317">95358 07317</a>, <a href="tel:8861917473">88619 17473</a></p>
     <p>💬 WhatsApp: <a href="https://wa.me/9535807317" target="_blank">Chat Now</a></p>
   </section>
 
